<resources>
    <string name="app_name">奇妙音乐</string>

    <!-- 底部导航菜单 -->
    <string name="nav_home">主页</string>
    <string name="nav_playlist">歌单</string>
    <string name="nav_library">乐库</string>
    <string name="search_music">搜索您的音乐</string>
    <string name="songs_lastest_added">最近收听的歌曲</string>

    <!-- 功能区域 -->
    <string name="play_history">播放历史</string>
    <string name="my_favorites">我的收藏</string>
    <string name="most_played">最常播放</string>
    <string name="random_play">随机播放</string>

    <!-- 内容区域 -->
    <string name="recent_albums">最近播放专辑</string>
    <string name="recent_artists">最近听过的艺术家</string>
    <string name="my_collection">我的收藏</string>
    <string name="random_recommendations">随机推荐</string>
    <string name="my_songs">我的歌曲</string>
    <string name="my_albums">我的专辑</string>
    <string name="my_artists">艺人列表</string>
    <string name="title_input">文本输入框</string>
    <string name="input_layout">输入框布局</string>

    <!-- 对话框相关字符串 -->
    <string name="dialog_ok">好的</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="title_cancel">取消</string>
    <string name="input_cannot_empty">输入不能为空</string>
    <string name="dialog_delete">删除</string>
    <string name="dialog_read">已读</string>
    <string name="dialog_dismiss">解散</string>
    <string name="dialog_logout">注销</string>
    <string name="dialog_exit">退出</string>
    <string name="dialog_recall">撤回</string>
    <string name="dialog_unfollow">取消关注</string>
    <string name="dialog_clear">清空</string>
    <string name="error_invalid_number">请输入有效的数字</string>
    <string name="button_scan_permission">授权扫描</string>
    <string name="has_no_music">暂无音乐</string>
    <string name="songs_cover">歌曲封面</string>
    <string name="album_cover">专辑封面</string>
    <string name="album_menus">专辑菜单</string>
    <string name="album_play_button">专辑播放按钮</string>
    <string name="artist_avatar">艺术家头像</string>
    <string name="artist_menus">艺术家菜单</string>
    <string name="artist_play_button">艺术家播放按钮</string>
    <string name="play">播放</string>
    
    <!-- 播放列表相关 -->
    <string name="playlist_title">播放列表 (%d首)</string>
    <string name="recent_added">最近收听</string>
    <string name="has_no_playlist">暂无歌单</string>
    <string name="create_first_playlist">点击右下角按钮创建您的第一个歌单</string>
    <string name="playlist_cover">歌单封面</string>
    <string name="playlist_menus">歌单菜单</string>
    <string name="playlist_play_button">歌单播放按钮</string>
    <string name="add_to_playlist_menu">添加到歌单</string>
    <string name="play_next">下一首播放</string>
    <string name="add_to_queue">添加到播放队列</string>
    <string name="rename_playlist">重命名</string>
    <string name="save_as_file">另存为文件</string>
    <string name="delete_playlist">删除歌单</string>
    <string name="rename_playlist_title">重命名播放列表</string>
    <string name="rename_playlist_hint">请输入新的播放列表名称</string>
    <string name="playlist_name_empty">播放列表名称不能为空</string>
    <string name="playlist_renamed">播放列表已重命名</string>
    <string name="playlist_saved">播放列表已保存</string>
    <string name="playlist_deleted">播放列表已删除</string>
    <string name="system_playlist_cannot_delete">系统播放列表不能删除</string>
    <string name="delete_playlist_confirmation">确定要删除播放列表 "%s" 吗？\n\n此操作将永久删除播放列表，无法恢复。</string>

    <!-- 多选相关字符串 -->
    <string name="select_none">请选择要操作的项目</string>
    <string name="select_songs">请选择要播放的歌曲</string>
    <string name="select_artists">请选择要播放的艺术家</string>
    <string name="select_albums">请选择要播放的专辑</string>
    <string name="select_items_to_add">请选择要添加的项目</string>
    <string name="select_items_to_remove">请选择要移除的项目</string>
    <string name="select_items_to_delete">请选择要删除的项目</string>
    <string name="no_songs_in_artists">选中的艺术家中没有歌曲</string>
    <string name="no_songs_in_albums">选中的专辑中没有歌曲</string>
    <string name="added_to_queue">已添加 %d 首歌曲到播放队列</string>
    <string name="removed_from_playlist">已从播放列表移除 %d 首歌曲</string>
    <string name="selected_count_songs">选中了%d首歌曲</string>
    <string name="selected_count_artists">选中了%d个艺术家</string>
    <string name="selected_count_albums">选中了%d个专辑</string>
    <string name="delete_confirmation_title">确认删除</string>
    <string name="delete_confirmation_message">确定要从设备上删除这 %d 首歌曲吗？\n\n此操作无法撤销！</string>
    <string name="delete_success">已删除 %d 首歌曲</string>
    <string name="delete_failed">删除失败</string>
    <string name="delete_cancelled">删除已取消</string>
    <string name="delete_some_failed">删除某些文件失败：权限不足</string>

    <!-- 播放器相关字符串 -->
    <string name="album_art">专辑封面</string>
    <string name="play_pause">播放/暂停</string>
    <string name="next">下一首</string>
    <string name="previous">上一首</string>
    <string name="shuffle">随机播放</string>
    <string name="repeat">重复播放</string>

    <!-- 音质信息相关 -->
    <string name="song_not_found">歌曲不存在</string>
    <string name="song_corrupted">歌曲已损坏</string>
    <string name="unknown_format">未知格式</string>
    <string name="unknown_bitrate">未知码率</string>
    <string name="unknown_sample_rate">未知采样率</string>

    <!-- 歌词相关 -->
    <string name="no_lyrics">暂无歌词</string>
    <string name="edit_lyrics">点此编辑歌词</string>
    <string name="lyrics_editor">歌词编辑器</string>
    <string name="lyrics_content">歌词内容</string>
    <string name="lyrics_format_guide">歌词格式说明</string>
    <string name="lyrics_format_example">格式示例：\n[00:00.00]歌词内容\n[00:05.00]下一行歌词\n\n支持时间标签格式：[分:秒.百分秒]</string>
    <string name="preview">预览</string>
    <string name="clear">清空</string>
    <string name="lyrics_loading">歌词加载中…</string>
    <string name="lyrics">歌词</string>
    <string name="lyrics_not_found">未找到歌词</string>

    <!-- 专辑详情页面相关字符串 -->
    <string name="album_name">专辑名称</string>
    <string name="play_all">全部播放</string>
    <string name="shuffle_play">随机播放</string>
    <string name="songs">歌曲</string>
    <string name="view_all">查看全部</string>
    <string name="other_albums_from_artist">来自该艺术家的其他专辑</string>
    <string name="other_albums_from_artist_format">来自 %s 的其他专辑</string>
    <string name="unknown_artist">Unknown Artist</string>

    <!-- 专辑详情功能提示 -->
    <string name="tag_editor_coming_soon">标签编辑器功能开发中…</string>
    <string name="added_to_play_queue">已添加到播放队列</string>
    <string name="add_to_playlist_coming_soon">添加到播放列表功能开发中…</string>
    <string name="load_album_detail_failed">加载专辑详情失败</string>

    <!-- 菜单项 -->
    <string name="edit_tags">编辑标签</string>
    <string name="add_to_playlist">添加到播放列表</string>

    <!-- 标签编辑器 -->
    <string name="tag_editor">标签编辑器</string>
    <string name="save">保存</string>
    <string name="album">专辑</string>
    <string name="album_artist">专辑艺术家</string>
    <string name="genre">流派</string>
    <string name="year">年份</string>
    <string name="track_total">Track total</string>
    <string name="disc_total">Disc total</string>
    <string name="click_to_select_image">点击选择图片</string>
    <string name="select_image">选择图片</string>
    <string name="tags_saved_successfully">标签保存成功</string>
    <string name="save_tags_failed">保存标签失败</string>
    <string name="permission_required">需要权限才能访问图片</string>
    <string name="no_image_selected">未选择图片</string>
    <string name="error_loading_image">加载图片失败</string>
    <string name="added_to_queue_next">已添加到播放队列下一首</string>
    <string name="added_to_playlist">已添加到播放列表</string>
    
    <!-- 排序相关 -->
    <string name="sort_by">排序方式</string>
    <string name="sort_by_name">名称</string>
    <string name="sort_by_song_count">歌曲数量</string>
    <string name="sort_by_create_time">创建时间</string>
    <string name="no_songs_to_play">没有可播放的歌曲</string>
    <string name="random_play_failed">随机播放失败</string>
    <string name="create_playlist">创建播放列表</string>
    <string name="no_songs_to_add">没有歌曲可以添加</string>
    <string name="no_artists_to_play">没有艺术家可以播放</string>
    <string name="no_albums_to_play">没有专辑可以播放</string>
    <string name="no_artists_to_add">没有艺术家可以添加</string>
    <string name="no_albums_to_add">没有专辑可以添加</string>
    <string name="songs_lastest">已经是最后一首歌啦</string>
    <string name="slogan">享受音乐的乐趣</string>
    <string name="delete_selected_songs">删除所选歌曲</string>
    <string name="clear_song_list">清空歌曲列表</string>
    <string name="clear_confirmation_title">确认清空</string>
    <string name="clear_confirmation_message">确定要清空这个列表吗？\n\n此操作无法撤销！</string>
    <string name="clear_success">已清空歌曲列表</string>
    <string name="delete_from_favorites_success">已从收藏中删除 %d 首歌曲</string>
    <string name="delete_from_history_success">已从播放历史中删除 %d 首歌曲</string>
    <string name="delete_from_most_played_success">已从最常播放中删除 %d 首歌曲</string>
    <string name="delete_records_confirmation_title">确认删除记录</string>
    <string name="delete_records_confirmation_message">确定要删除这 %d 首歌曲的记录吗？\n\n此操作不会删除设备上的文件。</string>
    <string name="clear_records_confirmation_title">确认清空记录</string>
    <string name="clear_records_confirmation_message">确定要清空这个列表的记录吗？\n\n此操作不会删除设备上的文件。</string>
    <string name="button_start">开始</string>
    <string name="button_stop">停止</string>
    <string name="button_finish">完成</string>
    <string name="title_all">全部</string>
    <string name="artist">艺术家</string>
    <string name="playlist">播放列表</string>
    <string name="search_empty">搜索内容为空</string>
    <string name="remove_cover">移除封面</string>
    <string name="change_cover">更换封面</string>
    <string name="cover_removed">封面已移除</string>
    <string name="pick_from_local_storage">从本地存储选择</string>
    <string name="web_search">网络搜索</string>
    <string name="update_image">更新图片</string>
    <string name="action_cancel">取消</string>
    <string name="error_load_failed">加载失败</string>
    
    <!-- 歌曲标签编辑器 -->
    <string name="song_tag_editor">歌曲标签编辑器</string>
    <string name="title">标题</string>
    <string name="track_number">曲目号</string>
    <string name="disc_number">碟片号</string>
    <string name="composer">作曲家</string>
    <string name="network_search">联网搜索</string>
    <string name="text_name">名称</string>
</resources>