<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_shuffle_play"
        android:title="@string/shuffle_play"
        android:icon="@drawable/ic_shuffle"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_play_next"
        android:title="@string/play_next"
        android:icon="@drawable/ic_skip_next"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/add_to_playlist"
        android:icon="@drawable/ic_playlist_play"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_clear_list"
        android:title="@string/clear_song_list"
        android:icon="@drawable/ic_delete"
        android:showAsAction="never" />

</menu> 