<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.magicalstory.music.homepage.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_playlist"
        android:name="com.magicalstory.music.homepage.PlaylistFragment"
        android:label="@string/nav_playlist"
        tools:layout="@layout/fragment_playlist" />

    <fragment
        android:id="@+id/nav_library"
        android:name="com.magicalstory.music.homepage.LibraryFragment"
        android:label="@string/nav_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.magicalstory.music.homepage.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>