<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_8"
    android:layout_marginStart="@dimen/margin_8"
    android:orientation="vertical">

    <!-- 专辑封面 -->
    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_8"
        app:cardCornerRadius="@dimen/margin_10"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:contentDescription="@string/album_cover"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_album" />

        <ImageView
            android:id="@+id/btn_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top|end"
            android:layout_margin="8dp"
            android:contentDescription="@string/album_menus"
            android:padding="3dp"
            android:src="@drawable/ic_more_ver"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/btnPlay"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start|bottom"
            android:layout_margin="8dp"
            android:background="@drawable/button_album_play"
            android:contentDescription="@string/album_play_button"
            android:padding="3dp"
            android:src="@drawable/ic_play"
            app:tint="@color/text_primary" />
    </androidx.cardview.widget.CardView>

    <!-- 专辑名称 -->
    <TextView
        android:id="@+id/tv_album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:text="专辑名称"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- 艺术家 -->
    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:text="Unknown Artist"
        android:textColor="@color/text_secondary"
        android:textSize="12sp" />

</LinearLayout>